--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
